[package]
name = "crdt-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge = "0.6.0" # change to 0.6.0 for automerge 2
criterion = "0.8.1"
dhat = "0.3.3"
divan = "0.1.21"
rand = "0.9.2"
yrs = "0.25.0"

[[bench]]
name = "load"
harness = false

[[bench]]
name = "b1"
harness = false

[[bench]]
name = "mem"
harness = false

[[bench]]
name = "version"
harness = false

[features]
dhat-heap = [] # if you are doing heap profiling
