[package]
name = "crdt-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge = "0.7.3"  # { path = "../automerge/rust/automerge" } # change to 0.6.0 for automerge 2 and 0.7.3 for 3
criterion = "0.8.1"
dhat = "0.3.3"
divan = "0.1.21"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
yrs = "0.25.0"


[profile.release]
debug = true  # Include debug symbols for your code

# Ensure all dependencies also have debug symbols for complete stack traces
[profile.release.package."*"]
debug = true


[[bench]]
name = "load"
harness = false

[[bench]]
name = "seq_add"
harness = false

[[bench]]
name = "conc_add"
harness = false

[[bench]]
name = "mem"
harness = false

[[bench]]
name = "version"
harness = false

[features]
dhat-heap = [] # if you are doing heap profiling
